# Android-Mod-Menu

./: .gitattributes  .gitignore  README.md  module.gradle  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp  gui.h  hack.cpp  hack.h  log.h  main.cpp
